- Made ./configure check if it has parameters, and error if it don't.
- Made ./configure remove uscore.c and uscore binary after test
- Removed mutex.c
- Credits changes, various tweaks mzp ftq Gzdqmx qhqdk dqxqmeq oapq otmxxqzsq. Tmbbk tgzfuzs.
- Fixed some ./configure errors
- Added ircd/safe_SSL_read/write from bahamut+inet6/azzuranet. This can be done much nicer
  when newio is done.
- Updated the config parser to be smarter when dealing with times and sizes
- Updated doc/conf.doc for any new config changes
- Made the win32 installer remove the . from the begining of . files and append .txt to
  most text files, ie .RELEASE.NOTES becomes RELEASE.NOTES.txt
- Updated .RELEASE.NOTES
- Fixed a bug where /who always reported 0 hops reported by Alzirr (#0000242)
- More SSL horror and fixed a missing , in m_who
- Fixed !SSL compile error
- Made the win32 installer have the option of installing as a service under NT and fixed a
  shortcut bug
- Fixed sptr->user->realhost becoming lowercase upon a +x
- Fixed +bbbbb lots of crap desynch bug
- Fixed OperOverride snotice bugs with halfop
- Standardized OperOverride notices
- Implemented new operoverride system
- Fixed some compile errors found by Zerwas and fixed some implementation problems of 
  the not able to set +z when there's non +z users (ULines not counted) in channel
- Fixed some SSL errors. read() returns -1 on error, so ircd_SSL_write and
  ircd_SSL_read must emulate the same. codemastr: could you check what the
  win32 equiviant of EIO is? I don't think my WSAEIO or whatever I called it
  in sys.h is correct.
- Seemingily we can't do SSLv3 only for ctx_server?
- Fixed some SJ3 bugs that could cause desync in rare cases
- Added some technical documentation in doc/technical. Docs include: 005.txt, base64.txt,
  token.txt, protoctl.txt, and vl.txt
- Send +f and +L in correct part of 005.
- Fixed SSL linking, again..
- SSL compile error fix in s_bsd.c
- Added some OpenSSL version showing