@@ -236,7 +236,7 @@ static const struct in6_addr in6addr_any = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
 #define P_EINTR         WSAEINTR
 #define P_ETIMEDOUT     WSAETIMEDOUT
 #define P_ENOTSOCK	WSAENOTSOCK
-#define P_EIO		WSAEIO
+#define P_EIO		EIO
 #endif
 
 #endif /* __sys_include__ */
