@@ -3704,9 +3704,21 @@ CMD_FUNC(m_trace)
 			      parv[0], LOGFILE, acptr->port);
 			  cnt++;
 			  break;
+#ifdef USE_SSL
+		  case STAT_SSL_CONNECT_HANDSHAKE:
+		  	sendto_one(sptr, rpl_str(RPL_NEWTYPE), me.name,
+		  	 parv[0], "SSL-Connect-Handshake", name); 
+			cnt++;
+			break;
+		  case STAT_SSL_ACCEPT_HANDSHAKE:
+		  	sendto_one(sptr, rpl_str(RPL_NEWTYPE), me.name,
+		  	 parv[0], "SSL-Accept-Handshake", name); 
+			cnt++;
+			break;
+#endif
 		  default:	/* ...we actually shouldn't come here... --msa */
 			  sendto_one(sptr, rpl_str(RPL_TRACENEWTYPE), me.name,
-			      parv[0], name);
+			      parv[0], "<newtype>", name);
 			  cnt++;
 			  break;
 		}
