@@ -1435,3 +1435,5 @@ seen. gmtime warning still there
 - Fixed SSL linking, again..
 - SSL compile error fix in s_bsd.c
 - Added some OpenSSL version showing
+- Win32 SSL compile fixes
+- Made /trace show correct for SSL handshake(s)
